--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daum-search-screensaver (1.0-2) lucid; urgency=low
+
+  * Fixed the Makefile & problems in debian directory
+
+ -- Homin Lee (Suapapa) <ff4500@gmail.com>  Mon, 29 Nov 2010 11:42:34 +0900
+
 daum-search-screensaver (1.0-1) lucid; urgency=low
 
   * Initial release
