--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daum-search-screensaver (1.0-3) lucid; urgency=low
+
+  * Fixed to use mplayer's playlist for random playing
+
+ -- Homin Lee (Suapapa) <ff4500@gmail.com>  Mon, 29 Nov 2010 13:52:54 +0900
+
 daum-search-screensaver (1.0-2) lucid; urgency=low
 
   * Fixed the Makefile & problems in debian directory
