--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+daum-search-screensaver (1.0-4) lucid; urgency=low
+
+  * Fixed fail on packaging
+
+ -- Homin Lee (Suapapa) <ff4500@gmail.com>  Tue, 30 Nov 2010 00:19:11 +0900
+
 daum-search-screensaver (1.0-3) lucid; urgency=low
 
   * Fixed to use mplayer's playlist for random playing
