--- a/README
+++ b/README
@@ -40,7 +40,8 @@ URL
 https://github.com/seungwon0/daum-search-screensaver
 
 
-Author
-------
+Authors
+-------
 
 Seungwon Jeong <seungwon0@gmail.com>
+Homin Lee (Suapapa) <ff4500@gmail.com>
